tests/paczka1/small_fuzzy/78465387.err
Error in line 3: K9EH A651 79,3
Error in line 6: yai9 A766 d8,3
Error in line 5: K9EH A766 6,5
Error in line 4: yai9 A861 62,7
Error in line 1: LJJXBz13 A651 41,9
